[gd_scene load_steps=6 format=2]

[ext_resource path="res://Items/HealthPotion.gd" type="Script" id=1]
[ext_resource path="res://Art/v1.1 dungeon crawler 16x16 pixel pack/props_itens/potion_red.png" type="Texture" id=2]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=1]
radius = 3.05273
height = 5.61857

[sub_resource type="CircleShape2D" id=2]
radius = 9.0

[node name="HealthPotion" type="Area2D"]
collision_layer = 0
collision_mask = 2
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 3 )
animation = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.28093, -0.374577 )
shape = SubResource( 1 )

[node name="Tween" type="Tween" parent="."]

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 5
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[connection signal="body_entered" from="." to="." method="_on_HealthPotion_body_entered"]
[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
